# rnbook

./: .gitignore  Cargo.toml  perf.data  scratch  todo  todo.txt
src/: color.rs  command.rs  config.rs  constant.rs  db.rs  main.rs  parser.rs  render.rs  state.rs  term.rs  util.rs
src/render/: mod.rs  render.rs
src/state/: helper.rs  mod.rs  state.rs
src/state/db/: db.rs
src/state/event/: event_handler.rs  mod.rs
src/state/terminal/: mod.rs  term.rs
src/util/: command.rs  command_bar.rs  config.rs  constant.rs  mod.rs  mode.rs  term.rs  util.rs
