[package]
name = "rnbook"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
dirs = "6.0.0"
serde = {version = "1.0.218", features = ["derive"] } 
serde_json = { version = "1.0.139" }
uuid = { version = "1", features = ["v4"] }

[profile.release]
# debug = true
opt-level = 3        
lto = true            # enable linktime opts
codegen-units = 1     
panic = "abort" 
